Fix an issue where most of the AJAX-enabled select boxes on the add view wizard would jump left while the AJAX throbber was active.

--- a/css/views-admin.theme.css
+++ b/css/views-admin.theme.css
@@ -279,6 +279,19 @@ th.views-ui-operations {
 /* @group Add view */
 
 /**
+ * Drupal core forces AJAX triggering elements to float left when they are
+ * disabled due to AJAX processing. On the add view page, we have inline
+ * containers where we don't want that behavior; it causes the select dropdown
+ * which is triggered to jump to the left while the AJAX throbber is active.
+ *
+ * See also http://drupal.org/node/769936 (Drupal core issue); when that is
+ * fixed it may no longer be necessary to do this.
+ */
+.views-admin .container-inline .progress-disabled {
+  float: none;
+}
+
+/**
  * I wish this didn't have to be so specific
  */
 .form-item-description-enable + .form-item-description {
@@ -333,14 +346,6 @@ td.group-title {
   font-weight: bold;
   padding-left: 0.5em; /* LTR */
   text-transform: uppercase;
-}
-
-.form-item-show-wizard-key label {
-  float: left;
-}
-
-.form-item-show-wizard-key select {
-  margin-left: 5px;
 }
 
 .exposed-description {
